Navbar: make sure donate button is always visible

--- a/src/components/sass/navbar.sass
+++ b/src/components/sass/navbar.sass
@@ -36,12 +36,10 @@
     padding: 8px
     text-align: center
     width: 150px
-    bottom: 100px
-    position: fixed
+    display: block
+    margin-top: 50px
 
 @media only screen and (max-width: 600px)
   body .site .navbar.is-active
     ul
       width: $container-width-mobile
-    .donate-button
-      bottom: 20px
